--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "names-changer"
 version = "0.1.0"
 authors = ["I_Nosovskiy <mananaxep@gmail.com>"]
+license = "MIT OR Apache-2.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,3 +10,4 @@ edition = "2018"
 [dependencies]
 regex = "1"
 case = "1.0.0"
+
